--- a/prueba.html
+++ b/prueba.html
@@ -45,8 +45,8 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-42796169-7');
-var dimensionValue = 'producto_X';
-gtag('set', 'dimension1', dimensionValue);
+var dimensionValue = 'Product X';
+ga('set', 'dimension2', dimensionValue);
 
 </script>
 
